<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:fontFamily="casual"
        android:text="@string/registrasi"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#B3B3B3" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:entries="@array/gender_list"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/e_mail"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#B3B3B3" />

        <EditText
            android:id="@+id/edtTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/telp"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#FFB3B3B3" />

        <EditText
            android:id="@+id/edtAddres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:hint="@string/alamat"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:textColor="#000000"
            android:textColorHint="#FFB3B3B3" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#40C4FF"
            android:text="@string/simpan" />

    </LinearLayout>

</LinearLayout>